--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "husky": "^9.0.11",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
