--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "husky": "^9.0.11",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -23,6 +22,8 @@
   "devDependencies": {
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
+    "husky": "^9.0.11",
+    "prettier": "^3.3.0",
     "typescript": "5.4.5"
   }
 }
