--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
     "typescript": "5.4.5"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,css,md}": "prettier --write"
   }
 }
