--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,12 @@
   "devDependencies": {
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
+    "prettier": "^3.3.0",
     "typescript": "5.4.5"
+  },
+  "lint-staged": {
+    "*.{js,ts,jsx,tsx,css,md}": "prettier --write"
   }
 }
