--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
+    "eslint": "^9.4.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
     "typescript": "5.4.5"
   },
   "lint-staged": {
+    "*.{js, ts, jsx, tsx}": "eslint --fix",
     "*.{js,ts,jsx,tsx,css,md}": "prettier --write"
-  }
+  },
+  "type": "module"
 }
