feat(eslint): script to validate eslint configuration and file

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@types/eslint": "^8.56.10",
     "next": "^14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tsx": "^4.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
