--- a/package.json
+++ b/package.json
@@ -16,19 +16,28 @@
   "license": "ISC",
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@types/eslint": "^8.56.10",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/node": "20.14.1",
     "@types/react": "18.3.3",
+    "eslint": "^9.4.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.4.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.0",
-    "typescript": "5.4.5"
+    "tsx": "^4.12.0",
+    "typescript": "5.4.5",
+    "typescript-eslint": "^7.12.0"
   },
   "lint-staged": {
+    "*.{js,ts,jsx,tsx}": "eslint --fix",
     "*.{js,ts,jsx,tsx,css,md}": "prettier --write"
-  }
+  },
+  "type": "module"
 }
